<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dlog_password_title">Password:</string>
    <string name="dlog_password_message">The document is encrypted.</string>
    <string name="dlog_password_retry">Invalid password.</string>
    <string name="text_search_hint">Search&#x2026;</string>
    <string name="toast_search_not_found">Search not found.</string>
    <string name="mupdf_link">https://mupdf.com/</string>
    <string name="mupdf">MuPDF</string>
    <string name="github_link">https://github.com/AndriiDubovyk/Bookend</string>
    <string name="source_code">Source Code</string>
    <string name="links">LINKS</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="right_margin">RIGHT MARGIN</string>
    <string name="left_margin">LEFT MARGIN</string>
    <string name="bottom_margin">BOTTOM MARGIN</string>
    <string name="top_margin">TOP MARGIN</string>
    <string name="text_align">TEXT ALIGN</string>
    <string name="font_size">FONT SIZE</string>
    <string name="font_face">FONT FACE</string>
</resources>
