<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/font_face_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/font_face"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <Spinner
                android:focusable="false"
                android:id="@+id/font_face_spinner"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:popupBackground="@color/supply_color2"
                android:gravity="center"
                android:backgroundTint="@color/text_color2"
                android:spinnerMode="dropdown"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/font_size_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/font_size"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/font_size_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:layout_marginBottom="-16dp"
                android:textColor="@color/text_color2"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/minus_font_size_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_left_white_24dp"
                    android:contentDescription="@string/minus" />
                <SeekBar android:id="@+id/font_size_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:thumb="@drawable/seek_thumb_white"
                    android:progressDrawable="@drawable/seek_line_white"
                    android:max="10"
                    />
                <ImageButton
                    android:id="@+id/plus_font_size_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    android:contentDescription="@string/plus" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/text_align_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/text_align"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <Spinner
                android:id="@+id/text_align_spinner"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:popupBackground="@color/supply_color2"
                android:backgroundTint="@color/text_color2"
                android:gravity="center"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/top_margin_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/top_margin"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/top_margin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:layout_marginBottom="-16dp"
                android:textColor="@color/text_color2"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/minus_top_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_left_white_24dp"
                    android:contentDescription="@string/minus" />
                <SeekBar android:id="@+id/top_margin_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:thumb="@drawable/seek_thumb_white"
                    android:progressDrawable="@drawable/seek_line_white"
                    android:max="10"
                    />
                <ImageButton
                    android:id="@+id/plus_top_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    android:contentDescription="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/bot_margin_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/bottom_margin"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/bot_margin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:layout_marginBottom="-16dp"
                android:textColor="@color/text_color2"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/minus_bot_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_left_white_24dp"
                    android:contentDescription="@string/minus" />
                <SeekBar android:id="@+id/bot_margin_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:thumb="@drawable/seek_thumb_white"
                    android:progressDrawable="@drawable/seek_line_white"
                    android:max="10"
                    />
                <ImageButton
                    android:id="@+id/plus_bot_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    android:contentDescription="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/left_margin_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/left_margin"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/left_margin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:layout_marginBottom="-16dp"
                android:textColor="@color/text_color2"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/minus_left_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_left_white_24dp"
                    android:contentDescription="@string/minus" />
                <SeekBar android:id="@+id/left_margin_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:thumb="@drawable/seek_thumb_white"
                    android:progressDrawable="@drawable/seek_line_white"
                    android:max="10"
                    />
                <ImageButton
                    android:id="@+id/plus_left_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    android:contentDescription="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/right_margin_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/right_margin"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/right_margin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:layout_marginBottom="-16dp"
                android:textColor="@color/text_color2"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/minus_right_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_left_white_24dp"
                    android:contentDescription="@string/minus" />
                <SeekBar android:id="@+id/right_margin_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:thumb="@drawable/seek_thumb_white"
                    android:progressDrawable="@drawable/seek_line_white"
                    android:max="10"
                    />
                <ImageButton
                    android:id="@+id/plus_right_margin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    android:contentDescription="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:id="@+id/links_item"
            android:background="@drawable/settings_item_background"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/links"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/source_code"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/github_link_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/github_link"
                android:textColor="@color/text_color2"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/mupdf"
                android:textColor="@color/supply_color1"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/mupdf_link_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/mupdf_link"
                android:textColor="@color/text_color2"
                android:textStyle="bold"
                android:textSize="12sp"
                />
        </LinearLayout>



    </LinearLayout>


</ScrollView>
